--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
     <link rel="stylesheet" href="assets/css/reset.css">
 </head>
 <body>
-    <h1>Clinica Matarazzo</h1>
+   <!--  <h1>Clinica Matarazzo</h1 -->
+<main>
+<nav class="menu">
+    <ul>
+        <li>Exames</li>
+        <li>Consultas</li>
+        <li>Especialidades</li>
+        <li>Pesquisar</li>
+        <li>Login</li>
+        <li>Cadastrar</li>
+    </ul>
+</nav>
+</main>
+
 </body>
 </html>
