--- a/index.html
+++ b/index.html
@@ -13,18 +13,32 @@
 </head>
 <body>
    <!--  <h1>Clinica Matarazzo</h1 -->
-<main>
-<nav class="menu">
-    <ul>
-        <li>Exames</li>
-        <li>Consultas</li>
-        <li>Especialidades</li>
-        <li>Pesquisar</li>
-        <li>Login</li>
-        <li>Cadastrar</li>
-    </ul>
-</nav>
-</main>
+    <header>
+        <nav class="menuzinho site">
+            <ul class="menu">
+                <li><a href="#">Exames</a></li>
+                <li><a href="#">Consultas</a></li>
+            </ul>
+            <div class="search">
+                <select>
+                    <option value="especialidade">Especialidade</option>
+                    <!-- Outras opções aqui -->
+                </select>
+                <input type="text" placeholder="Pesquisar">
+               
+            </div>
+            <ul class="auth">
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Cadastrar</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="hero">
+            <h1>Cuidando da Sua Visão com Excelência</h1>
+            <p>Na nossa clínica oftalmológica, sua saúde ocular é nossa prioridade. Com tecnologia avançada e uma equipe dedicada, oferecemos cuidados personalizados para garantir a melhor visão possível. Venha nos visitar!</p>
+        </div>
+    </main>
 
 </body>
 </html>
