--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <!-- Reset CSS (sempre em primeiro) -->
     <link rel="stylesheet" href="assets/css/reset.css">
 </head>
-<body>
+<body class="loginBody">
     <div class="container">
         <div class="left-panel">
             <img src="assets/img/logo.svg" alt="Logo" class="logo">
