--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <!--  <h1>Clinica Matarazzo</h1 -->
-    <header>
+    <header class="indexHeader">
         <nav class="menuzinho site">
             <ul class="menu">
                 <li><a href="#">Exames</a></li>
