--- a/login.html
+++ b/login.html
@@ -15,11 +15,14 @@
     <div class="container">
         <div class="left-panel">
             <img src="assets/img/logo.svg" alt="Logo" class="logo">
-            <h1>Matarazzo</h1>
+            <h1>MATARAZZO</h1>
+            <div class="linha"></div>
             <p>Oftalmologia</p>
             <button class="consultas-exames-btn">consultas e exames</button>
         </div>
+
         <div class="right-panel">
+            <div class="boleta"></div>
             <div class="login-form">
                 <div class="user-icon">
                     <img src="user-icon.png" alt="User Icon">
@@ -34,6 +37,7 @@
                     <button type="button" class="google-login-btn">continue with Google</button>
                     
                     <a href="#" class="register-link">Cadastre-se</a>
+                    <div class="quarter-circle"></div>
                 </form>
             </div>
         </div>
