--- a/inicio.html
+++ b/inicio.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clinica Matarazzo</title>
 
+      <!-- Reset CSS (sempre em primeiro) -->
+      <link rel="stylesheet" href="assets/css/reset.css">
+
+      <!-- Bootstrap 5 CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css&quot; rel="stylesheet" integrity="sha384-KyZXEJxv3DlFv6R0g3o8l6Y7T07O8aewF2lxk8WvGtnV7f6lrZI1n3J6fBdrmYk3" crossorigin="anonymous">
+
     <!-- Nosso CSS (sempre em primeiro) -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <!-- Reset CSS (sempre em primeiro) -->
-    <link rel="stylesheet" href="assets/css/reset.css">
+  
 </head>
 <body>
    <!--  <h1>Clinica Matarazzo</h1 -->
@@ -40,5 +45,16 @@
         </div>
     </main>
 
+    <div class="carousel-item">
+        <img src="/catarata.jpg" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Glaucoma</h5>
+          <p>O glaucoma é uma doença ocular silenciosa e progressiva que afeta o nervo óptico, responsável por transmitir as informações visuais do olho para o cérebro. Em sua forma mais comum, o glaucoma está relacionado ao aumento da pressão intraocular (pressão dentro do olho), que pode danificar o nervo óptico com o tempo, levando à perda da visão.</p>
+        </div>
+      </div>
+         
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js&quot; integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js&quot; integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js&quot; integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
