popup no btnAgendar

--- a/agendamento.html
+++ b/agendamento.html
@@ -132,12 +132,20 @@
                         <button class="horario-btn">18:00</button>
                     </div>
                     <div class="btnAgendar">
-                        <a href="#">Agendar</a>
+                        <a href="#popup">Agendar</a>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+
+    <!-- Popup de confirmação -->
+    <div id="popup">
+        <div class="popup-content">
+            <h2>Consulta agendada com sucesso!</h2>
+            <a href="#">Fechar</a>
+        </div>
+    </div>
 </body>
 
 <script src="assets/js/script.js"></script>
