--- a/inicio.html
+++ b/inicio.html
@@ -9,10 +9,9 @@
       <link rel="stylesheet" href="assets/css/reset.css">
 
       <!-- Bootstrap 5 CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css&quot; rel="stylesheet" integrity="sha384-KyZXEJxv3DlFv6R0g3o8l6Y7T07O8aewF2lxk8WvGtnV7f6lrZI1n3J6fBdrmYk3" crossorigin="anonymous">
 
     <!-- Nosso CSS (sempre em primeiro) -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/2style.css">
 
   
 </head>
@@ -45,24 +44,5 @@
         </div>
     </main>
 
-    <div class="carousel-item">
-        <img src="/glaucoma.webp" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Glaucomagit </h5>
-          <p>O glaucoma é uma doença ocular silenciosa e progressiva que afeta o nervo óptico, responsável por transmitir as informações visuais do olho para o cérebro. Em sua forma mais comum, o glaucoma está relacionado ao aumento da pressão intraocular (pressão dentro do olho), que pode danificar o nervo óptico com o tempo, levando à perda da visão.</p>
-        </div>
-      </div>
-
-      <div class="carousel-item">
-        <img src="/cornea.jpeg" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Córnea</h5>
-          <p>A córnea é a camada transparente e protetora na parte frontal do olho. Ela tem a forma de uma "lente" e é uma das partes mais importantes para a visão, pois ajuda a focalizar a luz que entra no olho, permitindo que você veja com clareza. Ela cobre a íris (a parte colorida do olho), a pupila (o centro do olho) e a câmara anterior do olho (a parte que contém o fluido).</p>
-        </div>
-      </div>
-         
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js&quot; integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js&quot; integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js&quot; integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
