--- a/index.html
+++ b/index.html
@@ -5,70 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clinica Matarazzo</title>
 
-    <!-- Nosso CSS (sempre em primeiro) -->
-    <link rel="stylesheet" href="assets/css/style.css">
-
     <!-- Reset CSS (sempre em primeiro) -->
     <link rel="stylesheet" href="assets/css/reset.css">
+
+    <!-- Nosso CSS (sempre em primeiro) -->
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
-   <!--  <h1>Clinica Matarazzo</h1 -->
-<main class="homeMain">
-    <nav class="menu">
-        <ul>
-            <li>Exames</li>
-            <li>Consultas</li>
-            <li>Especialidades</li>
-            <li>Pesquisar</li>
-            <li>Login</li>
-            <li>Cadastrar</li>
-        </ul>
-    </nav>
-</main>
-<footer class="footer">
-    <div class="footerNewsletter">
-        <input type="email" placeholder="Seu endereço de e-mail" class="footerInputEmail">
-        <button class="footerButton">Receber Novidades</button>
-    </div>
-    <div class="footerSections">
-        <div class="footerColumn">
-            <h4>Institucional</h4>
-            <ul>
-                <li><a href="#">Quem somos</a></li>
-                <li><a href="#">Atuação</a></li>
-                <li><a href="#">Notícias</a></li>
-                <li><a href="#">Trabalhe conosco</a></li>
-            </ul>
+    <section class="profissionais">
+        <h2>Entre em contato com nossos profissionais</h2>
+        <div class="profissional-card">
+            <div class="profissional">
+                <div class="foto">
+                    <img src="assets/img/olisinal.png" alt="">
+                </div>
+                <div class="info">
+                    <h3>Dr. João Silva</h3>
+                    <p>Cardiologista</p>
+                    <p>Especialista em cardiologia com mais de 10 anos de experiência.</p>
+                </div>
+                <button>Enviar Mensagem</button>
+            </div>
+            <div class="profissional">
+                <div class="foto">
+                    <img src="assets/img/doutor.png" alt="">
+                </div>
+                <div class="info">
+                    <h3>Dra. Mario Oliveira</h3>
+                    <p>Dermatologista</p>
+                    <p>Atua no tratamento de doenças da pele com atendimento humanizado.</p>
+                </div>
+                <button>Enviar Mensagem</button>
+            </div>
+            <div class="profissional">
+                <div class="foto">
+                    <img src="assets/img/olisinal2.png" alt="">
+                </div>
+                <div class="info">
+                    <h3>Dr. Carlos Mendes</h3>
+                    <p>Ortopedista</p>
+                    <p>Especialista em ortopedia e traumatologia com foco em reabilitação.</p>
+                </div>
+                <button>Enviar Mensagem</button>
+            </div>
         </div>
-        <div class="footerColumn">
-            <h4>Comunicação</h4>
-            <ul>
-                <li><a href="#">E-mail</a></li>
-                <li><a href="#">Ouvidoria</a></li>
-                <li><a href="#">Fale conosco</a></li>
-            </ul>
-        </div>
-        <div class="footerColumn">
-            <h4>Parcerias</h4>
-            <ul>
-                <li><a href="#">Albert Einstein</a></li>
-                <li><a href="#">Graacc</a></li>
-                <li><a href="#">São Luiz</a></li>
-            </ul>
-        </div>
-        <div class="footerVideo">
-            <iframe src="video_url_aqui" title="video" frameborder="0"></iframe>
-        </div>
-    </div>
-    <div class="footerSocial">
-        <a href="#" class="footerSocialIcon"> <img src="facebook_icon_url" alt="Facebook"></a>
-        <a href="#" class="footerSocialIcon"> <img src="twitter_icon_url" alt="Twitter"></a>
-        <a href="#" class="footerSocialIcon"> <img src="youtube_icon_url" alt="YouTube"></a>
-    </div>
-    <div class="footerPrivacy">
-        <a href="#">Política de privacidade</a>
-    </div>
-</footer>
-
+    </section>
 </body>
 </html>
