só falta o cadastro do bruno

--- a/agendamento.html
+++ b/agendamento.html
@@ -41,7 +41,7 @@
         <div class="agendamento-container bg-light p-4 rounded shadow-lg">
             <div class="topo">
                 <div>
-                    <a href="index.html">
+                    <a href="medico.html">
                         <div>
                             <img src="assets/img/btnVoltar.png" alt="">
                             <p>Voltar</p>
