--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     
     <!-- Nosso CSS (sempre em primeiro) -->
-    <link rel="stylesheet" href="assets/css/2style.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 
 
 </head>
@@ -34,8 +34,8 @@
 
             </div>
             <ul class="auth">
-                <li><a href="login.html">Login</a></li>
-                <li><a href="cadastro.html">Cadastrar</a></li>
+                <li><a href="pages/login.html">Login</a></li>
+                <li><a href="pages/cadastro.html">Cadastrar</a></li>
             </ul>
         </nav>
     </header>
@@ -118,7 +118,7 @@
                     <p>Cardiologista</p>
                     <p>Especialista em cardiologia com mais de 10 anos de experiência.</p>
                 </div>
-                <button><a style="color: white;" href="medico.html">Entre em contato</a></button>
+                <button><a style="color: white;" href="pages/medico.html">Entre em contato</a></button>
             </div>
             <div class="profissional">
                 <div class="foto">
@@ -129,7 +129,7 @@
                     <p>Dermatologista</p>
                     <p>Atua no tratamento de doenças da pele com atendimento humanizado.</p>
                 </div>
-                <button><a style="color: white;" href="medico.html">Entre em contato</a></button>
+                <button><a style="color: white;" href="pages/medico.html">Entre em contato</a></button>
             </div>
             <div class="profissional">
                 <div class="foto">
@@ -140,7 +140,7 @@
                     <p>Ortopedista</p>
                     <p>Especialista em ortopedia e traumatologia com foco em reabilitação.</p>
                 </div>
-                <button><a style="color: white;" href="medico.html">Entre em contato</a></button>
+                <button><a style="color: white;" href="pages/medico.html">Entre em contato</a></button>
             </div>
         </div>
     </section>
