--- a/pages/agendamento.html
+++ b/pages/agendamento.html
@@ -10,17 +10,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Reset CSS (sempre em primeiro) -->
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="../assets/css/reset.css">
 
     <!-- Nosso CSS (sempre por último) -->
-    <link rel="stylesheet" href="assets/css/agendamento.css">
+    <link rel="stylesheet" href="../assets/css/agendamento.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="index.html">
-                <div><img src="assets/img/logo.svg" alt=""></div>
+            <a href="../index.html">
+                <div><img src="../assets/img/logo.svg" alt=""></div>
                 <span>Clinica Matarazzo</span>
             </a>
         </div>
@@ -43,7 +43,7 @@
                 <div>
                     <a href="medico.html">
                         <div>
-                            <img src="assets/img/btnVoltar.png" alt="">
+                            <img src="../assets/img/btnVoltar.png" alt="">
                             <p>Voltar</p>
                         </div>
                     </a>
@@ -147,7 +147,5 @@
         </div>
     </div>
 </body>
-
-<script src="assets/js/script.js"></script>
 
 </html>
