--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome para ícones -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- meu css -->
-    <link rel="stylesheet" href="assets/css/cadastro.css">
+    <link rel="stylesheet" href="../assets/css/cadastro.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
 
                 <!-- Botões para voltar e login -->
                 <div class="d-flex justify-content-between mt-3">
-                    <a href="index.html" class="btn btn-secondary">Voltar</a>
+                    <a href="../index.html" class="btn btn-secondary">Voltar</a>
                     <a href="login.html" class="btn btn-link text-white">Já tem conta? Faça login</a>
                 </div>
             </form>
