--- a/pages/cadastro3.html
+++ b/pages/cadastro3.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome para ícones -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- meu css -->
-    <link rel="stylesheet" href="assets/css/cadastro.css">
+    <link rel="stylesheet" href="../assets/css/cadastro.css">
 </head>
 
 <body>
@@ -37,8 +37,8 @@
 
                 <!-- Botões para voltar e login -->
                 <div class="finalizar d-flex justify-content-between mt-3">
-                    <a href="index.html" class="btn btn-secondary">Voltar</a>
-                    <a href="index.html" class="btn btn-link text-white">Finalizar cadastro</a>
+                    <a href="../index.html" class="btn btn-secondary">Voltar</a>
+                    <a href="../index.html" class="btn btn-link text-white">Finalizar cadastro</a>
                 </div>
             </form>
         </div>
