--- a/pages/medico.html
+++ b/pages/medico.html
@@ -9,15 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Reset CSS (sempre em primeiro) -->
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/medico.css">
+    <link rel="stylesheet" href="../assets/css/reset.css">
+    <link rel="stylesheet" href="../assets/css/medico.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="index.html">
-                <div><img src="assets/img/logo.svg" alt=""></div>
+            <a href="../index.html">
+                <div><img src="../assets/img/logo.svg" alt=""></div>
                 <span>Clinica Matarazzo</span>
             </a>
         </div>
@@ -37,9 +37,9 @@
 
     <div class="topo">
         <div>
-            <a href="index.html">
+            <a href="../index.html">
                 <div>
-                    <img src="assets/img/btnVoltar.png" alt="">
+                    <img src="../assets/img/btnVoltar.png" alt="">
                     <p>Voltar</p>
                 </div>
             </a>
@@ -52,7 +52,7 @@
         <div class="container">
             <!-- Perfil do Médico -->
             <div class="perfil">
-                <img src="assets/img/olisinal.png" alt="Dr. Lucas Passarella Matsuhashi" class="foto-perfil">
+                <img src="../assets/img/olisinal.png" alt="Dr. Lucas Passarella Matsuhashi" class="foto-perfil">
                 <h1>Dr. Lucas Passarella Matsuhashi</h1>
                 <p>Oftalmologista</p>
                 <p>São Paulo <a href="#">4 endereços</a></p>
