arrumado os nomes dos cadastros

--- a/pages/cadastro3.html
+++ b/pages/cadastro3.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="form">
-            <h2>ENDEREÇO</h2>
+            <h2>CONTATO</h2>
             <form>
                 <div class="form-group">
                     <label for="email">Email:</label>
