--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="form">
-            <h2>ENDEREÇO</h2>
+            <h2>INFORMAÇÕES PESSOAIS</h2>
             <form>
                 <div class="form-group">
                     <label for="nome">Nome:</label>
