--- a/pages/login.html
+++ b/pages/login.html
@@ -40,6 +40,8 @@
                     <div class="logingoogle"><button type="button" class="google-login-btn">continue with Google <img src="../assets/img/google (1).png" alt="Icon"></button></div>
                     
                     <a href="cadastro.html" class="register-link">Cadastre-se</a>
+
+                    <a style="color:red; margin-left: 30px;" href="cadMedico.html">ADMIN</a>
                     <div class="quarter-circle"></div>
                 </form>
             </div>
