--- a/pages/cadMedico.html
+++ b/pages/cadMedico.html
@@ -1,107 +1,99 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clinica Matarazzo</title>
 
-    <!-- Reset CSS (sempre em primeiro) -->
-    <link rel="stylesheet" href="assets/css/reset.css" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulário</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/cadMedico.css">
 
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+</head>
 
-    <!-- Nosso CSS (sempre em primeiro) -->
-    <link rel="stylesheet" href="assets/css/cadMedico.css" />
-  </head>
+<body>
+  <header>
+    <div class="logo">
+        <a href="../index.html">
+            <div><img src="../assets/img/logo.svg" alt=""></div>
+            <span>Clinica Matarazzo</span>
+        </a>
+    </div>
+    <div class="search-bar">
+        <select name="especialidade" id="especialidade">
+            <option value="oftalmologia">Oftalmologia</option>
+            <option value="dermatologia">Dermatologia</option>
+            <option value="cardiologia">Cardiologia</option>
+        </select>
+        <input type="text" placeholder="Pesquisar                    🔎">
+    </div>
+    <div class="auth-buttons">
+        <a class="btnEntrar" href="login.html">Entrar</a>
+        <a class="btnCadastrar" href="cadastro.html">Cadastrar</a>
+    </div>
+</header>
+  <div class="container-fluid d-flex align-items-center">
+    <!-- Sidebar com imagem colada à esquerda -->
+    <div class="sidebar">
+      <img src="../assets/img/velho.png" alt="Imagem do usuário" class="img-fluid">
+    </div>
 
-  <body>
-    <header class="palmeiras">
-      <div class="velho"></div>
-
-      <div class="box">
-        <div class="nome">
-          <p>Seus Dados</p>
-          <p>Especialidade/CRN</p>
-          <p>E-mail e Senha</p>
-          <p>Concluído</p>
-        </div>
-
-        <div class="caixa">
-          <div class="bola"></div>
-          <div class="bola"></div>
-          <div class="bola"></div>
-          <div class="bola"></div>
-        </div>
-
-        <div>
-          <form class="row g-3">
-            <div class="col-md-6">
-              <label for="inputEmail4" class="form-label">Nome Completo</label>
-              <input type="email" class="form-control" id="inputEmail4" />
-            </div>
-            <div class="col-md-2">
-              <label for="inputPassword4" class="form-label"
-                >Data de Nascimento</label
-              >
-              <input type="password" class="form-control" id="inputPassword4" />
-            </div>
-            <div class="col-6">
-              <label for="inputAddress" class="form-label">CPF</label>
-              <input
-                type="text"
-                class="form-control"
-                id="inputAddress"
-                placeholder="1234 Main St"
-              />
-            </div>
-            <div class="col-6">
-              <label for="inputAddress2" class="form-label"
-                >Nacionalidade</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="inputAddress2"
-                placeholder="Apartment, studio, or floor"
-              />
-            </div>
-            <div class="col-md-6">
-              <label for="inputCity" class="form-label">RG</label>
-              <input type="text" class="form-control" id="inputCity" />
-            </div>
-            <div class="col-md-2">
-              <label for="inputState" class="form-label">Dígito</label>
-              <select id="inputState" class="form-select">
-                <option selected>Choose...</option>
-                <option>...</option>
-              </select>
-            </div>
-            <div class="col-md-4">
-              <label for="inputZip" class="form-label">Estado emissor</label>
-              <input type="text" class="form-control" id="inputZip" />
-            </div>
-            <div class="col-12">
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="gridCheck"
-                />
-                <label class="form-check-label" for="gridCheck">
-                  Check me out
-                </label>
-              </div>
-            </div>
-            <div class="col-12">
-              <button type="submit" class="btn btn-primary">Sign in</button>
-            </div>
-          </form>
-        </div>
+    <!-- Seção do formulário -->
+    <div class="form-section ms-3">
+      <!-- Barra de progresso -->
+      <div class="progress-bar-custom mb-4 d-flex justify-content-around align-items-center">
+        <span class="active-step">Seus Dados</span>
+        <span>Especialidade/CRM</span>
+        <span>E-mail e Senha</span>
+        <span>Concluído</span>
       </div>
-    </header>
-  </body>
+
+      <!-- Formulário -->
+      <form>
+        <div class="row mb-3">
+          <div class="col-md-8">
+            <label for="nome" class="form-label">Nome completo</label>
+            <input type="text" class="form-control" id="nome" name="nome">
+          </div>
+          <div class="col-md-4">
+            <label for="dataNascimento" class="form-label">Data de Nascimento</label>
+            <input type="date" class="form-control" id="dataNascimento" name="dataNascimento">
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-md-8">
+            <label for="cpf" class="form-label">CPF</label>
+            <input type="text" class="form-control" id="cpf" name="cpf">
+          </div>
+          <div class="col-md-4">
+            <label for="nacionalidade" class="form-label">Nacionalidade</label>
+            <input type="text" class="form-control" id="nacionalidade" name="nacionalidade">
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-md-6">
+            <label for="rg" class="form-label">RG</label>
+            <input type="text" class="form-control" id="rg" name="rg">
+          </div>
+          <div class="col-md-3">
+            <label for="digito" class="form-label">Dígito</label>
+            <input type="text" class="form-control" id="digito" name="digito">
+          </div>
+          <div class="col-md-3">
+            <label for="estadoEmissor" class="form-label">Estado emissor</label>
+            <input type="text" class="form-control" id="estadoEmissor" name="estadoEmissor">
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-between">
+          <button type="button" class="btn btn-secondary"><a style="color: white;" href="../index.html">Voltar</a></button>
+          <button type="submit" class="btn btn-primary">Prosseguir</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</body>
+
 </html>
