--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Nosso CSS (sempre em primeiro) -->
     <link rel="stylesheet" href="assets/css/index.css">
 
+    <!-- Ícone do site -->
+    <link rel="shortcut icon" href="assets/img/logo.svg" type="image/x-icon">
 
 </head>
 
